[package]
name = "puccinia"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenv = "0.15"
tempfile = "3.19"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
meval = "0.2"
